# diff-fuzz-pectra

./: .flake8  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.trunk/: trunk.yaml
docs/: design.md
tests/: LibCallerWrapper.py  conftest.py  strategies.py  test_bls12_map_fp_to_g1.py  test_bls12_map_fp_to_g2.py  test_g1_add.py  test_g1_msm.py  test_g2_add.py  test_g2_msm.py  test_pairing.py
wrappers/golang/: go.mod  go.sum  go_ethereum_wrapper.go
wrappers/python/: eels_wrapper.py
wrappers/rust/: Cargo.toml
wrappers/rust/src/: lib.rs
