# Minimal project metadata (required for uv run)
[project]
name = "fuzz_crosslang"
version = "0.1.0"
description = "Cross-language fuzzing tests for cryptographic operations"
requires-python = ">=3.10"
dependencies = ["pytest>=7.0.0", "hypothesis>=6.0.0", "pytest-xdist>=3.6.1"]

# Dependencies for uv
[tool.uv]
dev-dependencies = [
  "ruff>=0.9.9",
  "pytest>=7.0.0",
  "hypothesis>=6.0.0",
  "pytest-xdist>=3.6.1",
  "black>=23.9.1",
  "isort>=5.12.0",
  "flake8>=6.1.0",
]

[tool.uv.sources]
ethereum-execution = { git = "https://github.com/ethereum/execution-specs.git", rev = "forks/prague" }

# Testing configuration
[tool.pytest]
testpaths = ["python/tests"]

# Code formatting
[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Import sorting
[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

# Code linting
[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "B", "I"]
ignore = [
  "E501", # Line too long
]
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  ".pytest_cache",
  ".hypothesis",
]
